<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.mobilemakers.contactstudio2.ContactInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_first_name"/>

    <EditText android:id="@+id/edit_first_name"
        android:hint="@string/text_first_name_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_last_name"/>

    <EditText android:id="@+id/edit_last_name"
        android:hint="@string/text_last_name_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox android:id="@+id/check_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nickname"/>

    <EditText android:id="@+id/edit_nickname"
        android:hint="@string/text_nickname_example"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_picture"/>

    <ImageButton android:id="@+id/image_button_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_done"
            android:id="@+id/button_done"
            android:layout_gravity="right|bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:id="@+id/button_delete"
            android:layout_gravity="center_horizontal|bottom"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>
